--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "gulpfile.js",
   "devDependencies": {
     "autoprefixer": "^6.0.3",
+    "bluebird": "^3.0.5",
     "browser-sync": "^2.9.3",
+    "clean-css": "^3.4.6",
     "css-mqpacker": "^4.0.0",
     "cssnext": "^1.8.4",
     "del": "^2.0.2",
@@ -17,6 +19,7 @@
     "gulp-plumber": "^1.0.1",
     "gulp-postcss": "^6.0.0",
     "gulp-stylus": "^2.0.7",
+    "penthouse": "^0.4.1",
     "postcss": "^5.0.6",
     "run-sequence": "^1.1.3"
   },
